# poc-monorepo-multi-local

./: README.md
architecture-monorepo/: WORKSPACE  bazel-architecture-monorepo  bazel-bin  bazel-out  bazel-testlogs
architecture-monorepo/commons/addresses/: BUILD.bazel
architecture-monorepo/commons/addresses/src/main/java/address/: Address.java
functional-domain-monorepo/: WORKSPACE  bazel-bin  bazel-functional-domain-monorepo  bazel-out  bazel-testlogs
functional-domain-monorepo/domains/customer/: BUILD.bazel
functional-domain-monorepo/domains/customer/src/main/java/customer/: Customer.java
