load("@rules_java//java:defs.bzl", "java_binary")

java_binary(
    name = "build",
    srcs = glob(["src/main/java/**/*.*"]),
    create_executable = False,
    resources = glob(["src/main/resources/**"]),
    visibility = ["//visibility:public"],
    deps = [
        "@architecture//commons/addresses:build",
    ],
)
